<resources>
    <string name="app_name">Servicee</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="servis_girisi">Servis Girişi</string>
    <string name="kullanici_girisi">Kullanıcı Girişi</string>
    <string name="servis_girisi_string">SERVİS GİRİŞİ</string>
    <string name="e_posta_adresinizi_giriniz">E-posta adresinizi giriniz</string>
    <string name="sifrenizi_giriniz">Şifrenizi giriniz</string>
    <string name="bir_hesabin_yok_mu">Bir Hesabın Yok Mu?</string>
    <string name="kayit_ol">Kayıt Ol</string>
    <string name="sifremi_unuttum">Şifremi Unuttum</string>
    <string name="kullanici_girisi_string">KULLANICI GİRİŞİ</string>
    <string name="kullanici_adi_seciniz">Kullanıcı Adı Seçiniz</string>
    <string name="bir_sifre_giriniz">Bir şifre giriniz</string>
    <string name="sifreyi_tekrar_giriniz">Şifreyi tekrar giriniz</string>
    <string name="tamam">Tamam</string>
    <string name="forget_pass_desc">Aşağıdaki boşluğa e-posta adresinizi yazıp TAMAM butonuna tıkladıktan sonra şifrenizi yenilemeniz için e-posta adresinize bir link gönderilecektir. Birkaç dakika içerisinde gelen kutunuzu kontrol edebilirsiniz.</string>
    <string name="kullanici">Kullanıcı</string>
    <string name="exit_desc">Hesabınızdan çıkmak istediğinize emin misiniz?</string>
    <string name="exitstring">Çıkış Yap</string>
    <string name="cancelstring">Vazgeç</string>
    <string name="servis">Servis</string>
    <string name="cekici_cagir">Çekici Çağır</string>
    <string name="randevu_al">Randevu Al</string>
    <string name="randevularim">Randevularım</string>
    <string name="ana_menu">Ana menü</string>
    <string name="musteri_hizmetleri">Müşteri Hizmetleri</string>
    <string name="verdiginiz_hizmetleri_seciniz">Verdiğiniz hizmetleri seçiniz</string>
    <string name="parca_degisimi">Parça değişimi</string>
    <string name="fiyat_giriniz">Fiyat giriniz</string>
    <string name="aku_degisimi">Akü Değişimi</string>
    <string name="far_ayari">Far Ayarı</string>
    <string name="check_up">Check Up</string>
    <string name="suspansiyon_testi">Süspansiyon Testi</string>
    <string name="lastik_degisimi">Lastik Değişimi</string>
    <string name="sogutma_sivisi_degisimi">Soğutma Sıvısı Değişimi</string>
    <string name="yag_filtresi_degisimi">Yağ Filtresi Değişimi</string>
    <string name="periyodik_bakim">Periyodik Bakım</string>
    <string name="kaydi_tamamla">Kaydı Tamamla</string>
    <string name="puan">Puan:</string>
    <string name="hizmetler">Hizmetler</string>
    <string name="bekleyen_randevular">Bekleyen Randevular</string>
    <string name="randevu_istegi">Randevu isteğiniz başarıyla gönderilmiştir</string>
    <string name="ana_menuye_don">Ana menüye dön</string>
    <string name="geri_don">Geri Dön</string>
    <string name="tarih">Tarih:</string>
    <string name="yapilacak_islemler">Yapılacak İşlemler</string>
    <string name="onayla">Onayla</string>
    <string name="reddet">Reddet</string>
    <string name="onaylanan_randevular">Onaylanan Randevular</string>
    <string name="konum">Konum:</string>
    <string name="musteri_desc_text">Müşteri temsilcisine bağlanmak için aşağıdaki butona basabilirsiniz.</string>
    <string name="ara">ARA</string>
    <string name="uzaklik">Uzaklık:</string>
    <string name="cekici_listesi">Çekici Listesi</string>
    <string name="servis_listesi">Servis Listesi</string>
    <string name="hizmet_tamam">Hizmet Tamamlandı</string>
    <string name="hizmet_tamam_desc">Hizmetin tamamlandığını onaylıyor musunuz? Onayladığınız takdirde müşteriye bilgi verilecektir.</string>
    <string name="evetstring">evet</string>
    <string name="yapilan_islemler">Yapılan İşlemler</string>
    <string name="puani_gonder">Puanı Gönder</string>
    <string name="derecelendirme">Aldığınız hizmeti derecelendirin</string>
</resources>