<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.MainFragment">

    <TextView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/kullaniciAdiAnaFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kullanici"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="17sp"
        android:textColor="@color/appButtonColor"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/userLayout">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/servisButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/girisyapselector"
            android:ems="9"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/servis"
            android:textColor="@color/white"
            android:textSize="19sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cekiciCagirButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/girisyapselector"
            android:ems="9"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/cekici_cagir"
            android:textColor="@color/white"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/servisButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/servisLayout">

        <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/bekleyenRandevuler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bekleyen_randevular"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="21sp"
            android:textColor="@color/appButtonColor"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/randevuRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bekleyenRandevuler"/>


    </androidx.constraintlayout.widget.ConstraintLayout>



    <ImageView
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/signOutButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_baseline_power_settings_new_24" />


</androidx.constraintlayout.widget.ConstraintLayout>