<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ServisDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/randevuAlmadanOnceLayout">

        <TextView
            android:id="@+id/servisNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:paddingVertical="20dp"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="35dp"
            android:background="@color/transparent_white"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/servisNameText"
            android:layout_height="0.3dp"/>

        <TextView
            android:id="@+id/hizmetlerBaslik"
            android:text="@string/hizmetler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_bold"
            android:paddingVertical="20dp"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/servisNameText"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hizmetlerListesi"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="22sp"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintBottom_toTopOf="@id/randevuAlButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hizmetlerBaslik"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/randevuAlButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/girisyapselector"
            android:ems="8"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/randevu_al"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:id="@+id/randevuAldiktanSonraLayout">


        <TextView
            android:id="@+id/randevuIstegi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="25sp"
            android:layout_marginBottom="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/randevu_istegi"
            android:textColor="@color/white"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/geriDon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/girisyapselector"
            android:ems="10"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/geri_don"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/randevuIstegi" />



    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>